* `2020-09-25 08:50` [72987c0](https://gitlab.informatom.com/3-schweinehunde/encrateia/-/commit/72987c0) -  (HEAD -> master, origin/master, oberwart/master, github/master) filter for valid ecors only"
* `2020-09-25 08:37` [c27de5d](https://gitlab.informatom.com/3-schweinehunde/encrateia/-/commit/c27de5d) -  sport selector for power,pace vs distance and power/hr
* `2020-09-24 16:04` [624e413](https://gitlab.informatom.com/3-schweinehunde/encrateia/-/commit/624e413) -  type annotations
* `2020-09-24 16:02` [f33296d](https://gitlab.informatom.com/3-schweinehunde/encrateia/-/commit/f33296d) -  sport selector for ftp and power ratio athlete diagrams
* `2020-09-24 15:56` [b3104e8](https://gitlab.informatom.com/3-schweinehunde/encrateia/-/commit/b3104e8) -  sport selector for ecor and power athlete diagrams
* `2020-09-24 15:49` [62b8128](https://gitlab.informatom.com/3-schweinehunde/encrateia/-/commit/62b8128) -  sport selector for styd cadence and speed per heart rate athlete diagrams
* `2020-09-24 15:41` [0dbe8c2](https://gitlab.informatom.com/3-schweinehunde/encrateia/-/commit/0dbe8c2) -  sport selector for pace and hr athlete diagrams
* `2020-09-24 14:58` [dfd1d2c](https://gitlab.informatom.com/3-schweinehunde/encrateia/-/commit/dfd1d2c) -  add 'all' option to sports for moving time and distance to select all activities
* `2020-09-24 14:31` [8af3d32](https://gitlab.informatom.com/3-schweinehunde/encrateia/-/commit/8af3d32) -  sizing of lap bars"
* `2020-09-24 13:13` [b7b4c0d](https://gitlab.informatom.com/3-schweinehunde/encrateia/-/commit/b7b4c0d) -  skip pauses by moving ahead lastTimestamp with every start event
* `2020-09-24 11:50` [2e9d11d](https://gitlab.informatom.com/3-schweinehunde/encrateia/-/commit/2e9d11d) -  extend record list to be an event list
* `2020-09-23 17:06` [732f838](https://gitlab.informatom.com/3-schweinehunde/encrateia/-/commit/732f838) -  optimize record viewer for smaller devices