@@ -1,0 +1,2 @@
+#Sat May 01 14:27:20 CEST 2021
+gradle.version=6.1.1
