@@ -1,6 +1,7 @@
 import 'package:encrateia/actions/setupDemoAthlete.dart';
 import 'package:encrateia/screens/onboarding_screens/onboarding_finished_screen.dart';
 import 'package:encrateia/screens/onboarding_screens/onboarding_strava_credentials_screen.dart';
+import 'package:encrateia/utils/my_button.dart';
 import 'package:encrateia/utils/my_color.dart';
 import 'package:flushbar/flushbar.dart';
 import 'package:flutter/material.dart';
@@ -52,7 +53,8 @@ class _OnboardingCreateUserScreenState
                     ),
                     ButtonBar(
                       children: <Widget>[
-                        FlatButton(
+                        ElevatedButton(
+                          style: MyButton.raisedButtonStyle,
                           child: const Text('Create Demo User'),
                           onPressed: () async {
                             await setupDemoAthlete(
@@ -87,7 +89,8 @@ class _OnboardingCreateUserScreenState
                     ),
                     ButtonBar(
                       children: <Widget>[
-                        FlatButton(
+                        TextButton(
+                          style: MyButton.flatButtonStyle,
                           child: const Text('Connect to Strava'),
                           onPressed: () async {
                             await Navigator.push(
@@ -125,7 +128,8 @@ class _OnboardingCreateUserScreenState
                     ),
                     ButtonBar(
                       children: <Widget>[
-                        FlatButton(
+                        TextButton(
+                          style: MyButton.flatButtonStyle,
                           child: const Text('Create standalone User'),
                           onPressed: () {
                             athlete.setupStandaloneAthlete();
