@@ -1,4 +1,5 @@
 import 'package:encrateia/screens/dashboard.dart';
+import 'package:encrateia/utils/my_button.dart';
 import 'package:encrateia/utils/my_color.dart';
 import 'package:flutter/material.dart';
 import 'package:flutter/widgets.dart';
@@ -33,7 +34,8 @@ class OnboardingFinishedScreen extends StatelessWidget {
                   ),
                   ButtonBar(
                     children: <Widget>[
-                      FlatButton(
+                      TextButton(
+                        style: MyButton.flatButtonStyle,
                         child: const Text('Finish'),
                         onPressed: () async {
                           await Navigator.pushAndRemoveUntil(
