@@ -7,10 +7,8 @@ environment:
   sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-
   charts_flutter: ^0.8.1
+  collection: ^1.14.13
   csv: ^4.0.3
   cupertino_icons: ^0.1.2
   datetime_picker_formfield: ^1.0.0
@@ -20,11 +18,14 @@ dependencies:
   # fit_parser:
   #   path: '../fit_parser'
   flushbar: 1.10.4
+  flutter:
+    sdk: flutter
   flutter_launcher_icons: ^0.7.2
   flutter_markdown: ^0.4.1
   flutter_material_color_picker: ^1.0.5
   flutter_secure_storage: ^3.3.1+1
   flutter_staggered_grid_view: 0.3.0
+  package_info: ^0.4.0+16
   path_provider: ^1.6.7
   sqfentity: ^1.3.5+3
   sqfentity_gen: ^1.3.5+6
@@ -32,12 +33,8 @@ dependencies:
   strava_flutter: ^1.2.1+54
   url_launcher: ^5.5.0
   uuid: 2.0.4
-  package_info: ^0.4.0+16
-  collection: ^1.14.13
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   build_runner: ^1.10.1
   build_verify: ^1.1.1
 
